added mobile responsive to signup and login forms

--- a/login-application/src/App.css
+++ b/login-application/src/App.css
@@ -36,3 +36,16 @@
     transform: rotate(360deg);
   }
 }
+
+
+#login-page {
+  height: 100vh;
+  background-image: url("./background-image-dxc.jpg");
+  background-size: cover;
+}
+
+#sign-up-page {
+  height: 100vh;
+  background-image: url("./background-image-dxc.jpg");
+  background-size: cover;
+}
