--- a/login-application/src/components/LoginForm.css
+++ b/login-application/src/components/LoginForm.css
@@ -66,3 +66,11 @@
         padding: 30px;
     }
 }
+
+@media only screen and (min-width: 1440px) {
+    div#login-form{
+        margin-right: 350px;
+        margin-left: 350px;
+        padding: 50px;
+    }
+}
