--- a/login-application/src/components/LoginForm.css
+++ b/login-application/src/components/LoginForm.css
@@ -58,6 +58,10 @@
     font-style: italic;
 }
 
+.language-text {
+    text-decoration: underline;
+}
+
 
 @media only screen and (min-width: 768px) {
     div#login-form{
